--- a/student/views/group_views.xml
+++ b/student/views/group_views.xml
@@ -6,6 +6,7 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <!-- Tree view for Groups -->
     <record id="view_group_tree" model="ir.ui.view">
         <field name="name">group.tree</field>
         <field name="model">course.group</field>
@@ -18,6 +19,7 @@
         </field>
     </record>
 
+    <!-- Search view for Groups -->
     <record id="view_group_search" model="ir.ui.view">
         <field name="name">group.search</field>
         <field name="model">course.group</field>
@@ -30,6 +32,7 @@
         </field>
     </record>
 
+    <!-- Form view for Groups -->
     <record id="view_group_form" model="ir.ui.view">
         <field name="name">group.form</field>
         <field name="model">course.group</field>
@@ -41,7 +44,6 @@
                         <field name="course_id"/>
                         <field name="teacher_id"/>
                         <field name="student_ids"/>
-<!--                        <field name="payment_ids"/>-->
                     </group>
                     <notebook>
                         <page string="Payments">
